--- a/web/index.html
+++ b/web/index.html
@@ -11,11 +11,10 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div>Suma 2.1</div>
         <form action="Second_Page.jsp"  method="post">
             <input name="number1" id= "number1" type="number" ><br>
             <input name="number2" id= "number2" type="number" ><br>
-            <input type="submit" value="Ok">    
+            <input name="number3" id= "number3" type="number" ><br>
         </form>
     </body>
 </html>
